--- a/css/tasklistitem.css
+++ b/css/tasklistitem.css
@@ -1,7 +1,17 @@
-#list ul #tasks{
+html * {
+    font-family: Arial, Helvetica, sans-serif;
+}   
+
+li {
+    max-width:50%;
+    clear: both;
+    float: left;
+}
+
+#list #tasks > li{
     background-color: red; 
 }
 
-#list ul #tasks.completed{
+#list #tasks > li.completed{
     background-color: lightgreen;
 }
