--- a/css/tasklistitem.css
+++ b/css/tasklistitem.css
@@ -2,13 +2,9 @@ html * {
     font-family: Arial, Helvetica, sans-serif;
 }   
 
-li {
-    max-width:50%;
-    clear: both;
-    float: left;
+.tasks ul > li{
+    width: 100%;
 }
-
-
 .checkit{
     font-size: 20px;
     padding: 10px;
